--- a/css/styles.scss
+++ b/css/styles.scss
@@ -18,3 +18,147 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 @import "bootstrapComponents";
 
 // 5. Du kan lave styling her...
+
+*{
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  font-family: 'Montserrat', sans-serif;
+}
+
+.custom-navbar{
+  background-color: #141414;
+}
+
+.custom-navbar .nav-link,
+.custom-navbar .navbar-brand {
+  color: #fff387;
+}
+
+.custom-navbar .nav-link:hover {
+  color: #d4c85c;
+}
+
+.custom-navbar .dropdown-menu {
+  background-color: #141414;
+}
+
+.custom-navbar .dropdown-item {
+  color: #fff387;
+}
+
+.custom-navbar .dropdown-item:hover {
+  background-color: #d4c85c;
+  color: #141414;
+}
+
+.custom-navbar .navbar-toggler {
+  border: none;   /* eller none */
+  background-color: transparent;
+  box-shadow: none;
+}
+
+.custom-navbar .navbar-toggler:focus,
+.custom-navbar .navbar-toggler:active,
+.custom-navbar .navbar-toggler:focus-visible {
+  outline: none;
+  box-shadow: none;
+}
+
+
+.custom-navbar .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba(255,243,135,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
+.navbar-brand {
+  font-weight: 600;
+}
+
+.custom-navbar .navbar-nav {
+  gap: 5rem; /* justér frit */
+}
+
+.custom-navbar {
+  height: 80px; /* Juster højden */
+}
+
+.custom-navbar .navbar-brand,
+.custom-navbar .nav-link {
+  line-height: 80px; /* Vertikal centering */
+  font-size: 1.2rem; /* Eventuelt større tekst */
+}
+
+.connected-starters {
+  color: #fff387;
+  font-size: 8vw; /* responsiv størrelse */
+  padding-left: 1.5rem;  /* svarer til ms-4 */
+  padding-right: 1.5rem; /* svarer til me-4 */
+  padding-bottom: 4rem; /* <-- tilføjet mere sort mellemrum under */
+  box-sizing: border-box; /* sikrer, at padding ikke overskrider skærmbredden */
+  background-color: #141414;
+}
+
+.connected-starters span {
+  display: inline-block;
+}
+
+@media (max-width: 768px) {
+  .connected-starters span {
+    display: block; /* hvert ord på egen linje */
+    font-size: 15vw; /* lidt større på mobil */
+  }
+}
+
+/* Fjern line-height for links i kollapset navbar på mobil */
+@media (max-width: 992px) {
+  .navbar-collapse .nav-link {
+    line-height: 55px !important;
+    padding-top: 0.25rem !important;
+    padding-bottom: 0.25rem !important;
+  }
+
+  .navbar-collapse .dropdown-item {
+    padding-top: 0.25rem !important;
+    padding-bottom: 0.25rem !important;
+  }
+
+  /* Fjern gap mellem nav-items i vertikal menu */
+  .navbar-collapse .navbar-nav {
+    gap: 0 !important;
+  }
+}
+
+/* Baggrund på burgermenu (mobil) */
+@media (max-width: 992px) {
+  .custom-navbar .navbar-collapse {
+    background-color: #141414; /* samme sort som navbar */
+  }
+}
+
+.forsidetekst1{
+  padding-left: 7rem;
+  font-size: 40px;
+  font-weight: lighter;
+}
+
+@media (max-width: 992px) {
+  .forsidetekst1{
+    padding-left: 2rem;
+    font-size: 25px;
+  }
+  }
+
+.forsidetekst2{
+  padding-left: 7rem;
+  font-size: 20px;
+  font-weight: normal;
+}
+
+@media (max-width: 992px) {
+  .forsidetekst2{
+    padding-left: 2rem;
+    font-size: 16px;
+  }
+}
