--- a/css/styles.scss
+++ b/css/styles.scss
@@ -243,12 +243,26 @@ body{
 }
 
 .lokabokse{
-  margin-top: 150px;
+  background-color: #f5f5f5; /* lidt mørkere end hvid */
+  padding: 4rem 2rem;
+  border-radius: 20px;
+  max-width: 85%;
+  margin: 150px auto; /* centreret + luft */
+}
+
+@media (min-width: 768px) {
+  .lokaboks1 {
+    border-left: 1px solid #dddddd;
+    border-right: 1px solid #dddddd;
+    padding: 0 2rem;
+  }
 }
 
 .lokabokse a{
   text-decoration: underline;
 }
+
+
 
 /* Desktop */
 @media (min-width: 767px) {
@@ -285,7 +299,11 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 100px;
+  background-color: #f5f5f5; /* lidt mørkere end hvid */
+  padding: 4rem 2rem;
+  border-radius: 20px;
+  max-width: 85%;
+  margin: 100px auto; /* centreret + luft */
 }
 
 .lokaboks2 p{
@@ -350,7 +368,7 @@ body{
 }
 
 .forsidetekst12{
-  max-width: 80%;
+  max-width: 90%;
   font-size: 25px;
   font-weight: bold;
   padding-left: 10%;
@@ -359,7 +377,7 @@ body{
 
 .forsidetekst22{
   padding-left: 10%;
-  max-width: 80%;
+  max-width: 90%;
   font-size: 20px;
   font-weight: normal;
 }
@@ -368,6 +386,13 @@ body{
   .forsidetekst22{
     padding-left: 10%;
     font-size: 16px;
+  }
+}
+
+@media (max-width: 767px) {
+  .forsidetekst12{
+    padding-left: 10%;
+    font-size: 20px;
   }
 }
 
